# minimal-wcmp-precision-loss

./: .gitignore  README.md
wcmp/: CMakeLists.txt  DCN.cpp  DCN.h  MiddleBlock.cpp  MiddleBlock.h  SuperBlock.cpp  SuperBlock.h  ToR.cpp  ToR.h  definitions.h  main.cpp  main.h  weightReduction.cpp
wcmp/components/: DCN.h  Link.cpp  Link.h  Path.cpp  Path.h  Switch.cpp  Switch.h
wcmp/deprecated/: Link.cpp  Path.h  Switch.cpp
wcmp/deprecated/full/: ArcBasedILPSolver.cpp  ArcBasedLPSolver.cpp  FullTopology.cpp  FullTopology.h  PathBasedILPSolver.cpp  PathBasedLPSolver.cpp
wcmp/solver/: AbstractSolver.h  ArcBasedILPSolver.cpp  ArcBasedILPSolver.h  ArcBasedLPSolver.cpp  ArcBasedLPSolver.h  IntraDomainILPSolver.cpp  IntraDomainILPSolver.h  PathBasedILPSolver.cpp  PathBasedILPSolver.h  PathBasedLPSolver.cpp  PathBasedLPSolver.h
wcmp/topology/: AbstractTopology.h  DCN.h
wcmp/topology/aurora/: AuroraTopology.cpp  AuroraTopology.h
wcmp/topology/dcnonly/: DCNOnlyTopology.cpp  DCNOnlyTopology.h
wcmp/topology/full/: ArcBasedILPSolver.cpp  ArcBasedLPSolver.cpp  FullTopology.cpp  FullTopology.h  ILPSolver.cpp  LPSolver.cpp  PathBasedILPSolver.cpp  PathBasedLPSolver.cpp
wcmp/topology/intradomain/: IntraDomainTopology.cpp  IntraDomainTopology.h
wcmp/topology/simple/: SimpleTopology.cpp  SimpleTopology.h
wcmp/trace/: Trace.cpp  Trace.h  trace.pb.cc  trace.pb.h
wcmp/traffic_trace/: Trace.cpp  Trace.h  trace.pb.cc  trace.pb.h  trace.proto
wcmp/unused_components/: Link.h  Path.cpp  Switch.h
